travaux-pratiques/1-pod.yaml
kind: Pod
apiVersion: v1
metadata:
  name: mon-premier-prod
spec:
  containers:
  - name: container-1
    image: sdenel/hello-world # nginx:alpine
# TODO tuer, parler distroless
