travaux-pratiques/4-ingress.yaml
#apiVersion: extensions/v1beta1
#kind: Ingress
#metadata:
#  name: mon-premier-ingress
#spec:
#  rules:
#    - host: demo.denel.fr
#      http:
#        paths:
#          - path: /
#            backend:
#              serviceName: mon-premier-service
#              servicePort: http
# Sadly, new way is using a CRD. Example:
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: management-kubernetes-dashboard
#  namespace: simon
spec:
  entryPoints: []
  routes:
    # Home
    - kind: Rule
      match: Host(`demo.k8s.denel.io`)
      #      middlewares:
      #        - name: management-basicauth-admin
      #        - name: compress
      priority: 1
      services:
        - kind: Service
          name: mon-premier-service
#          namespace: simon
          port: 80
